[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "01_pt1"
path = "src/01_pt1.rs"

[[bin]]
name = "01_pt2"
path = "src/01_pt2.rs"

[[bin]]
name = "02_pt1"
path = "src/02_pt1.rs"

[[bin]]
name = "02_pt2"
path = "src/02_pt2.rs"

[[bin]]
name = "03_pt1"
path = "src/03_pt1.rs"

[[bin]]
name = "03_pt2"
path = "src/03_pt2.rs"

[[bin]]
name = "04_pt1"
path = "src/04_pt1.rs"

[dependencies]
